--- a/src/main/resources/templates/oauthLogin.html
+++ b/src/main/resources/templates/oauthLogin.html
@@ -36,7 +36,7 @@
                     <div class="form-actions">
                         <a th:href="@{/signup}" class="link">회원가입</a>
                         <a th:href="@{/findEmail}" class="link" style="margin-left: 1rem">이메일 찾기</a>
-                        <a th:href="@{/password-reset}" class="link" style="margin-left: 1rem">비밀번호 찾기</a>
+                        <a th:href="@{/findPassword}" class="link" style="margin-left: 1rem">비밀번호 찾기</a>
                     </div>
                     <div>
                         <button type="submit" class="btn btn-primary btn-block" id="login-btn">로그인</button>
