로그인화면 비회원모드 추가

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,6 +61,8 @@
             로그인
         </button>
 
+        <a href="/guest" class="guest_btn">비회원으로 구경하기</a>
+
         <div class="find_btn">
             <a href="/findEmail">이메일 찾기</a>
             <a href="/findPassword">비밀번호 찾기</a>
