--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -50,7 +50,7 @@
                         <span id="like-count" th:text="${article.likes}"></span>
                     </div>
                     <hr class="my-3">
-                    <p class="fs-5 mb-4" th:text="*{content}"></p>
+                    <p class="fs-5 mb-4" th:utext="*{content}"></p>
 
                     <!-------------------댓글 입력 창------------------->
                     <div sec:authorize="isAnonymous()">
