--- a/src/main/resources/static/style/articleList.css
+++ b/src/main/resources/static/style/articleList.css
@@ -1,14 +1,105 @@
+.article-container span {
+    color: #888; /* 댓글 수 텍스트 색상 */
+}
+
+.table {
+    width: 100%;
+    margin: 20px 0;
+    border-collapse: separate;
+    border-spacing: 0;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    cursor: default;
+}
+
+.table th {
+    background-color: #f8f9fa;
+    color: #495057;
+    font-weight: bold;
+    padding: 10px;
+    border-bottom: 2px solid #dee2e6;
+    cursor: default;
+}
+
+.table td {
+    padding: 10px;
+    vertical-align: middle;
+    border-bottom: 1px solid #dee2e6;
+    cursor: default;
+}
+.table tr {
+    cursor: default;
+}
+
+.table tr:hover {
+    background-color: #f1f3f5;
+    cursor: pointer;
+}
+
 .article-container {
     display: flex;
-    align-items: center; /* 수직 정렬 */
+    justify-content: space-between;
+    align-items: center;
 }
 
 .article-container a {
-    margin-right: 10px; /* 링크와 댓글 수 사이에 공간 추가 */
+    color: #007bff;
+    font-weight: 500;
+    text-decoration: none;
+    margin-right: 10px;
+    cursor: pointer;
 }
 
-.article-container span {
-    color: #888; /* 댓글 수 텍스트 색상 */
+.article-container a:hover {
+    text-decoration: underline;
+}
+
+.table-bordered td, .table-bordered th {
+    border: 1px solid #dee2e6;
+}
+
+.article-number-title  {
+    display: flex;
+    align-items: center;
+}
+
+.article-number-title span {
+    margin-right: 50px;
+    font-weight: normal; /* 제목보다 작은 사이즈 */
+    color: #6c757d; /* 회색 */
+    font-size: 0.8rem; /* 제목보다 작은 사이즈 */
+}
+
+.article-number-title .article-title {
+    font-weight: bold; /* 제목은 굵게 */
+    font-size: 1rem; /* 제목 폰트 크기 */
+}
+
+.visually-hidden {
+    display: none;
+}
+
+.table th, .table td {
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .table {
+        font-size: 0.9rem;
+    }
+
+    .table td, .table th {
+        padding: 8px;
+    }
+
+    .article-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .article-container span {
+        margin-top: 5px;
+        color: #868e96;
+    }
 }
 /* 전체 pagination 컨테이너 스타일 */
 #pagination {
