--- a/src/main/resources/templates/phone-number-request.html
+++ b/src/main/resources/templates/phone-number-request.html
@@ -23,7 +23,6 @@
     <div id="verification-code-container" style="display: none;" class="form-group">
         <label for="verificationCode">인증번호:</label>
         <input type="text" class="form-control" id="verificationCode" name="verificationCode"
-               required minlength="6"
                placeholder="인증번호 입력(6자리)">
         <button id="verify-code-button" class="btn btn-primary">인증번호 확인</button>
         <div id="countdown"></div>
@@ -61,7 +60,8 @@
                     document.getElementById("error-message").style.display = "none";
                     document.getElementById("verification-code-container").style.display = "block";
                     startCountdown(5 * 60);
-                } else {
+                } else if (data.code === 500) {
+                    window.location.href = '/error/500'
                     document.getElementById("error-message").innerText = "인증번호 전송에 실패했습니다.";
                 }
             })
@@ -98,6 +98,15 @@
 
         const phoneNumber = document.getElementById("phoneNumber").value;
         const verificationCode = document.getElementById("verificationCode").value;
+
+        if (!verificationCode) {
+            alert('인증번호를 입력해주세요');
+            return;
+        }
+        if (verificationCode.length !== 6) {
+            alert('인증번호는 6자리 숫자입니다.');
+            return;
+        }
 
         fetch("/api/verify/code/sms", {
             method: "POST",
