--- a/src/main/resources/templates/email-request.html
+++ b/src/main/resources/templates/email-request.html
@@ -141,10 +141,9 @@
         const email = document.getElementById("email").value;
         const newPassword = document.getElementById("newPassword").value;
 
-        const errorMessage = document.getElementById("error-message");
         const pattern = /^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,16}$/;
         if (!pattern.test(newPassword)) {
-            errorMessage.innerText = "비밀번호 형식이 올바르지 않습니다.";
+            alert('비밀번호 형식이 올바르지 않습니다.');
             return;
         }
 
