전체 게시글 정보 DTO 레코드 변경 및 MapStruct 적용

--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -47,7 +47,7 @@
                         <span th:text="${iter.count}"></span> <!-- 번호 -->
                         <div class="article-container">
                             <a th:href="@{/articles/{id}(id=${article.id})}" th:text="${article.title}"></a>
-                            <span th:text="|[${article.countComment}]|"></span>
+                            <span th:text="|[${article.commentCount}]|"></span>
                         </div>
                     </div>
                 </td>
