--- a/src/main/resources/templates/phone-number-request.html
+++ b/src/main/resources/templates/phone-number-request.html
@@ -20,11 +20,11 @@
     <a href="/findPassword" class="btn btn-primary">비밀번호 찾기</a>
     <a href="/login" class="btn btn-secondary">로그인</a>
 
-    <div id="verification-code-container" style="display: none;" class="form-group">
+    <div id="verification-code-container" style="display: none; margin-top: 1rem" class="form-group">
         <label for="verificationCode">인증번호:</label>
         <input type="text" class="form-control" id="verificationCode" name="verificationCode"
                placeholder="인증번호 입력(6자리)">
-        <button id="verify-code-button" class="btn btn-primary">인증번호 확인</button>
+        <button id="verify-code-button" class="btn btn-primary" style="margin-top: 1rem">인증번호 확인</button>
         <div id="countdown"></div>
     </div>
 
@@ -46,6 +46,12 @@
             return;
         }
 
+        function showLoadingMessage() {
+            const errorMessageElement = document.getElementById("error-message");
+            errorMessageElement.innerText = "전송 중입니다...";
+            errorMessageElement.style.display = "block";
+        }
+
         fetch("/api/verify/phoneNumber", {
             method: "POST",
             headers: {
@@ -54,8 +60,12 @@
             body: JSON.stringify({
                 "phoneNumber": phoneNumber
             })
-        }).then(response => response.json())
+        }).then(response => {
+            document.getElementById("error-message").style.display = "none";
+            return response.json()
+        })
             .then(data => {
+                console.log('data = ', data);
                 if (data.code === 200) {
                     document.getElementById("error-message").style.display = "none";
                     document.getElementById("verification-code-container").style.display = "block";
@@ -63,13 +73,16 @@
                 } else if (data.code === 500) {
                     window.location.href = '/error/500'
                     document.getElementById("error-message").innerText = "인증번호 전송에 실패했습니다.";
+                    document.getElementById("error-message").style.display = "block";
                 }
             })
             .catch(error => {
                 console.error("Error:", error);
                 document.getElementById("error-message").innerText = "오류가 발생했습니다.";
+                document.getElementById("error-message").style.display = "block";
             })
 
+        showLoadingMessage();
     });
 
     function startCountdown(duration) {
