--- a/src/main/resources/templates/email-request.html
+++ b/src/main/resources/templates/email-request.html
@@ -122,16 +122,25 @@
         }).then(response => response.json())
             .then(data => {
                 if (data.code === 200) {
+                    if (data.data !== 'none') {
+                        alert('해당 계정은 ' + data.data + ' 소셜로 가입된 계정입니다.');
+                        window.location.href = '/login';
+                        return;
+                    }
                     alert("인증되었습니다.");
                     document.getElementById("verification-code-container").style.display = "none";
                     document.getElementById("password-input-container").style.display = "block";
-                } else {
+                } else if (data.code === 400) {
                     document.getElementById("error-message").innerText = "인증번호 확인에 실패했습니다.";
+                    document.getElementById("error-message").style.display = "block";
+                } else if(data.code === 500) {
+                    document.getElementById("error-message").innerText = "회원 조회에 실패했습니다.";
+                    document.getElementById("error-message").style.display = "block";
                 }
             })
             .catch(error => {
                 console.error("Error:", error);
-                document.getElementById("error-message").innerText = "오류가 발생했습니다.";
+                alert('오류가 발생했습니다.');
             });
 
     });
