날씨 API 연동하여 메인 화면에 현재 지역 날씨 출력 기능 추가

--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -137,6 +137,9 @@
 
     <button style="margin-bottom: 50px" onclick="submitForm()" id="search-button" class="btn btn-primary mt-3">검색</button>
 </div>
+<footer>
+    <div th:replace="~{fragments/footer :: common_footer}"></div>
+</footer>
 
 <script src="/js/search.js"></script>
 <script src="/js/searchPageEvents.js"></script>
